--- a/server/public/style.css
+++ b/server/public/style.css
@@ -14,6 +14,11 @@ table {
     text-align: center;
 }
 
+.big-text {
+    font-size:1.6em;
+}
+
 .logo {
     width:100px;
+    vertical-align: middle;
 }
