--- a/server/public/style.css
+++ b/server/public/style.css
@@ -10,6 +10,11 @@ table {
     width: 100%;
 }
 
+button {
+    font-size:1em;
+    border-radius: 6px;
+}
+
 .center-text {
     text-align: center;
 }
